Updating Gradle and adding Guava