@@ -1,7 +1,7 @@
 plugins {
   java
   application
-  id("io.freefair.lombok") version "6.4.2"
+  id("io.freefair.lombok") version "6.5.1"
 }
 
 repositories {
@@ -9,6 +9,7 @@ repositories {
 }
 
 dependencies {
+  implementation("com.google.guava:guava:31.1-jre")
   testImplementation("org.junit.jupiter:junit-jupiter:5.8.2")
   testImplementation("org.assertj:assertj-core:3.22.0")
   testImplementation("org.mockito:mockito-junit-jupiter:4.4.0")
@@ -34,4 +35,8 @@ tasks.withType<Jar> {
   manifest {
     attributes["Main-Class"] = "poligon.App"
   }
+}
+
+tasks.withType<JavaCompile>().forEach {
+  it.options.compilerArgs.add("--enable-preview")
 }
